--- a/index.html
+++ b/index.html
@@ -37,15 +37,10 @@
 
     <h1>可以愿你一起庆祝valentines天吗?</h1>
     <h1>may i bring you out to celebrate 情人节 together?</h1>
-    <p>Date: Feb 14 2026</p>
-    <p>Time: Anytime</p>
-    <p>Location: lao pat sat / any kopitiam / maggie</p>
 
     <div class="buttons">
-        <button class="btn" onclick="window.location.href='page1.html'">可以!!</button> <!-- Links to page1.html -->
-        <button class="btn" onclick="window.location.href='page1.html'">Yes I would love to!!</button> <!-- Links to page1.html -->
-        <button class="btn" onclick="alert('if u press this first idk what to say uh')">ok loh</button>
-        <button class="btn" onclick="alert('i sad liao')">why no "no" button one</button>
+        <button class="btn" onclick="window.location.href='page1.html'">可以 Yes I would love to!!!!</button> <!-- Links to page1.html -->
+        <button class="btn" onclick="alert('fk u i sad liao ˙◠˙')">no</button>
     </div>
 
     <!-- Play & Stop Music Buttons -->
