--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ok come fight</title>
+    <title>last warning</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,12 +21,8 @@
     </style>
 </head>
 <body>
-
-    <h1>可以愿你一起庆祝valentines天吗?</h1>
-    <h1>may i bring you out to celebrate 情人节 together?</h1>
-    <p>Date: Feb 14 2026</p>
-    <p>Time: Anytime</p>
-    <p>Location: lao pat sat / any kopitiam / maggie</p>
-
+    <h1>cya on friday my idiot</h1>
+    <p>Date: 14 Feb 2025</p>
+    <p>Location: kopitiam</p>
 </body>
 </html>
