--- a/page1.html
+++ b/page1.html
@@ -34,11 +34,8 @@
     </style>
 </head>
 <body>
-    <h1>cya on friday my idiot <3</h1>
-    <p>Date: 14 Feb 2025</p>
-    <p>Location: kopitiam</p>
 
-    <h2>did we first talk?</h2>
+    <h2>when did we first talk?</h2>
     <p>if you get wrong you owe me one dollar. idw talk to you alr also.</p>
     <div class="buttons">
         <button class="btn" onclick="checkAnswer(true)">6th jan 2025</button>  <!-- Correct Answer -->
