--- a/page2.html
+++ b/page2.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>i love toes</title>
+    <title>last warning</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-image: url('https://www.dropbox.com/scl/fi/xxmzg4txy942qlarwlgfm/Your-paragraph-text-3.png?rlkey=12lhdigitvkw1rwdexlc1fdek&raw=1');
+            background-image: url('https://www.dropbox.com/scl/fi/z6r8tmh2q0vql73posazm/Your-paragraph-text-4.png?rlkey=ols10zinrj48bkd4vrrdjempg&raw=1');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
